<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/developers_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Орлов 333"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/val1_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/first_value" />

        <EditText
            android:id="@+id/txt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/val2_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/second_value" />

        <EditText
            android:id="@+id/txt_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/result_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10px"
            android:text="@string/result_title" />

        <TextView
            android:id="@+id/result_outtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="..."
            android:textAlignment="textEnd" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="add_click"
            android:text="@string/addition_btn" />

        <Button
            android:id="@+id/btn_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sub_click"
            android:text="@string/substraction_btn" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_mul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mul_click"
            android:text="@string/multiplication_btn" />

        <Button
            android:id="@+id/btn_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="div_click"
            android:text="@string/division_btn" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pow_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="pow_click"
            android:text="@string/pow_btn" />

        <Button
            android:id="@+id/sqrt_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sqrt_click"
            android:text="@string/sqrt_btn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sin_click"
            android:text="@string/sin_btn" />

        <Button
            android:id="@+id/cos_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cos_click"
            android:text="@string/cos_btn" />

        <Button
            android:id="@+id/tan_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="tan_click"
            android:text="@string/tan_btn" />

    </LinearLayout>
</LinearLayout>